@@ -1,3 +1,7 @@
+=== SVN
+
+* Implemented custom row fetchers in SQLite adapter.
+
 === 0.3.0.1 (2007-10-20)
 
 * Changed Database#fetch to return a modified dataset.
